--- a/src/app/shared/featured/notes/create-notes/create-notes.component.html
+++ b/src/app/shared/featured/notes/create-notes/create-notes.component.html
@@ -24,6 +24,6 @@
               <label for="" class="form-label">Category</label>
               <input type="text" class="form-control" formControlName = 'category'>
           </div>
-            <button [disabled]="noteForm.invalid" class="btn btn-primary">Sign up</button>
+            <button  class="btn btn-primary">Sign up</button>
       </form>
   </div>
