--- a/src/app/shared/featured/notes/create-notes/create-notes.component.html
+++ b/src/app/shared/featured/notes/create-notes/create-notes.component.html
@@ -14,7 +14,7 @@
           </div>
           <div class="mb-3">
             <label for="" class="form-label">Tag</label>
-            <input type="number" class="form-control" formControlName = 'tag'>
+            <input type="text" class="form-control" formControlName = 'tags'>
           </div>
           <div class="mb-3">
               <label for="" class="form-label">Content</label>
